changed profile image ..

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <input type="submit" value="Login"> -->
     <table cellpadding="10px">
       <tr>
-        <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQFPGw3-leF7dQ/profile-displayphoto-shrink_400_400/0/1649867574353?e=1665014400&v=beta&t=A-5En6J7ptYMOEMwXC_qYla-5FJAgfPpeiiJwTEJ52Q" height="130" align="right" /></td>
+        <td><img src="image/profile.png" height="130" align="right" /></td>
         <td>
           <h1>Animesh Banerjee</h1>
           <p class="address">
